--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,144 +1,167 @@
- body {
-     background-color: black;
-     min-height: 100%;
-     margin: auto;
-     background-image: url('https://i.redd.it/5oxeqrahdap41.jpg') no-repeat center center fixed;
-     -webkit-background-size: cover;
-     -moz-background-size: cover;
-     -o-background-size: cover;
-     background-size: cover;
- }
- 
- html {
-     min-height: 100%;
- }
- 
- #quoteStuff {
-     width: 80%;
-     margin: auto;
- }
- 
- .mainPage {
-     text-shadow: 2px 2px 4px black;
-     -webkit-text-stroke-width: 1px;
-     -webkit-text-stroke-color: black;
-     font-family: 'Open Sans', sans-serif;
-     color: white;
-     animation: fadeIn ease 10s;
-     -webkit-animation: fadeIn ease 10s;
-     -moz-animation: fadeIn ease 10s;
-     -o-animation: fadeIn ease 10s;
-     -ms-animation: fadeIn ease 10s;
- }
- 
- #quote {
-     font-size: larger;
- }
- 
- #author {
-     font-size: large;
- }
- 
- #date {
-     font-size: xx-large;
- }
- 
- #time {
-     font-size: xx-large;
- }
- 
- #state {
-     font-size: x-large;
- }
- 
- .searchDiv {
-     text-align: center;
- }
- 
- .searchDiv>input {
-     text-align: left;
- }
- 
- #searchBar[type="search"]:focus {
-     outline: none;
-     background-color: black;
- }
- 
- #searchBar {
-     color: white;
-     border: none;
-     box-shadow: inset;
-     opacity: 0.7;
-     border-top-style: hidden;
-     border-right-style: hidden;
-     border-left-style: hidden;
-     border-bottom-style: hidden;
-     width: 60%;
-     font-size: large;
-     background-color: #817c7c;
-     border-radius: 30px;
-     font-size: 18px;
-     padding-left: 00px;
-     padding: 20px;
- }
- 
- input[type=search]::-webkit-input-placeholder {
-     color: wheat;
- }
- 
- input[type=search]:-moz-placeholder {
-     color: wheat;
- }
- 
- input[type=search]::-moz-placeholder {
-     color: wheat;
- }
- 
- input[type=search]:-ms-input-placeholder {
-     color: wheat;
- }
- 
- @keyframes fadeIn {
-     0% {
-         opacity: 0;
-     }
-     100% {
-         opacity: 1;
-     }
- }
- 
- @-moz-keyframes fadeIn {
-     0% {
-         opacity: 0;
-     }
-     100% {
-         opacity: 1;
-     }
- }
- 
- @-webkit-keyframes fadeIn {
-     0% {
-         opacity: 0;
-     }
-     100% {
-         opacity: 1;
-     }
- }
- 
- @-o-keyframes fadeIn {
-     0% {
-         opacity: 0;
-     }
-     100% {
-         opacity: 1;
-     }
- }
- 
- @-ms-keyframes fadeIn {
-     0% {
-         opacity: 0;
-     }
-     100% {
-         opacity: 1;
-     }
- }
+body {
+    margin: 0px;
+    background-color: black;
+    background-image: url('https://i.redd.it/5oxeqrahdap41.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+#quoteStuff,
+#dateStuff {
+    width: 80%;
+    margin: auto;
+}
+
+.mainPage {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-shadow: 1px 1px 0px black;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+    color: white;
+    animation: fadeIn ease 10s;
+    -webkit-animation: fadeIn ease 10s;
+    -moz-animation: fadeIn ease 10s;
+    -o-animation: fadeIn ease 10s;
+    -ms-animation: fadeIn ease 10s;
+}
+
+#quote {
+    font-size: larger;
+}
+
+#author {
+    font-size: large;
+}
+
+#date {
+    font-size: xx-large;
+}
+
+#time {
+    font-size: xx-large;
+}
+
+#state {
+    font-size: x-large;
+}
+
+.searchDiv {
+    text-align: center;
+}
+
+.searchDiv>input {
+    text-align: left;
+}
+
+#searchBar[type="search"]:focus {
+    outline: none;
+    background-color: black;
+}
+
+#searchBar {
+    color: white;
+    border: none;
+    box-shadow: inset;
+    opacity: 0.45;
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;
+    border-bottom-style: hidden;
+    width: 60%;
+    font-size: large;
+    background-color: gray;
+    border-radius: 30px;
+    font-size: 18px;
+    padding-left: 00px;
+    padding: 20px;
+}
+
+input[type=search]::-webkit-input-placeholder {
+    color: wheat;
+}
+
+input[type=search]:-moz-placeholder {
+    color: wheat;
+}
+
+input[type=search]::-moz-placeholder {
+    color: wheat;
+}
+
+input[type=search]:-ms-input-placeholder {
+    color: wheat;
+}
+
+.myButton {
+    margin-bottom: 10px;
+    text-align: center;
+    background-color: #456cc7;
+    -webkit-border-radius: 28px;
+    -moz-border-radius: 28px;
+    border-radius: 28px;
+    border: none;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Verdana;
+    font-size: 17px;
+    padding: 16px 31px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #000000;
+}
+
+.myButton:hover {
+    background-color: #2fa4d6;
+}
+
+.myButton:active {
+    position: relative;
+    top: 1px;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-moz-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-o-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-ms-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
