--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,20 @@
-body {
-    margin: 0px;
+body,
+html {
+    min-height: 100%;
+    height: 100%;
+    margin: 0;
     background-color: black;
-    background-image: url('https://i.redd.it/5oxeqrahdap41.jpg') no-repeat center center fixed;
+}
+
+#wrapper {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
+    margin: 0;
+    min-height: 100%;
 }
 
 #quoteStuff,
@@ -15,10 +24,8 @@ body {
 }
 
 .mainPage {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Open Sans;
     text-shadow: 1px 1px 0px black;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: black;
     color: white;
     animation: fadeIn ease 10s;
     -webkit-animation: fadeIn ease 10s;
@@ -28,23 +35,23 @@ body {
 }
 
 #quote {
-    font-size: larger;
+    font-size: 20px;
 }
 
 #author {
-    font-size: large;
+    font-size: 16px;
 }
 
 #date {
-    font-size: xx-large;
+    font-size: 45px;
 }
 
 #time {
-    font-size: xx-large;
+    font-size: 40px;
 }
 
 #state {
-    font-size: x-large;
+    font-size: 30px;
 }
 
 .searchDiv {
@@ -64,7 +71,7 @@ body {
     color: white;
     border: none;
     box-shadow: inset;
-    opacity: 0.45;
+    opacity: 0.48;
     border-top-style: hidden;
     border-right-style: hidden;
     border-left-style: hidden;
@@ -105,7 +112,7 @@ input[type=search]:-ms-input-placeholder {
     display: inline-block;
     cursor: pointer;
     color: #ffffff;
-    font-family: Verdana;
+    font-family: Open Sans;
     font-size: 17px;
     padding: 16px 31px;
     text-decoration: none;
@@ -119,6 +126,48 @@ input[type=search]:-ms-input-placeholder {
 .myButton:active {
     position: relative;
     top: 1px;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+::-webkit-scrollbar-button {
+    width: 0px;
+    height: 0px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #e1e1e1;
+    border: 0px none #ffffff;
+    border-radius: 50px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #ffffff;
+}
+
+::-webkit-scrollbar-thumb:active {
+    background: #000000;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+    border: 0px none #ffffff;
+    border-radius: 50px;
+}
+
+::-webkit-scrollbar-track:hover {
+    background: #666666;
+}
+
+::-webkit-scrollbar-track:active {
+    background: #333333;
+}
+
+::-webkit-scrollbar-corner {
+    background: transparent;
 }
 
 @keyframes fadeIn {
