--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,5 @@
-body,
-html {
-    min-height: 100%;
-    height: 100%;
-    margin: 0;
-    background-color: black;
-}
-
-#wrapper {
+.App {
+    background-color: #000000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -24,7 +17,7 @@ html {
 }
 
 .mainPage {
-    font-family: Open Sans;
+    font-family: 'Open Sans';
     text-shadow: 1px 1px 0px black;
     color: white;
     animation: fadeIn ease 10s;
@@ -112,7 +105,7 @@ input[type=search]:-ms-input-placeholder {
     display: inline-block;
     cursor: pointer;
     color: #ffffff;
-    font-family: Open Sans;
+    font-family: 'Open Sans';
     font-size: 17px;
     padding: 16px 31px;
     text-decoration: none;
