Adds route to about

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,15 @@
 .App {
-    background-color: #000000;
+    background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
     margin: 0;
     min-height: 100%;
+    height: 100%;
+    flex-grow: 1;
+    overflow: auto;
 }
 
 #quoteStuff,
@@ -17,7 +19,7 @@
 }
 
 .mainPage {
-    font-family: 'Open Sans';
+    font-family: "Open Sans";
     text-shadow: 1px 1px 0px black;
     color: white;
     animation: fadeIn ease 10s;
@@ -51,7 +53,7 @@
     text-align: center;
 }
 
-.searchDiv>input {
+.searchDiv > input {
     text-align: left;
 }
 
@@ -78,19 +80,19 @@
     padding: 20px;
 }
 
-input[type=search]::-webkit-input-placeholder {
+input[type="search"]::-webkit-input-placeholder {
     color: wheat;
 }
 
-input[type=search]:-moz-placeholder {
+input[type="search"]:-moz-placeholder {
     color: wheat;
 }
 
-input[type=search]::-moz-placeholder {
+input[type="search"]::-moz-placeholder {
     color: wheat;
 }
 
-input[type=search]:-ms-input-placeholder {
+input[type="search"]:-ms-input-placeholder {
     color: wheat;
 }
 
@@ -105,7 +107,7 @@ input[type=search]:-ms-input-placeholder {
     display: inline-block;
     cursor: pointer;
     color: #ffffff;
-    font-family: 'Open Sans';
+    font-family: "Open Sans";
     font-size: 17px;
     padding: 16px 31px;
     text-decoration: none;
