--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
+    background-color: #000000;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
