--- a/src/about/About.css
+++ b/src/about/About.css
@@ -1,6 +1,6 @@
 .backButton {
-    margin-top: 10px;
-    margin-left: 10px;
+    margin-top: 1%;
+    margin-left: 1%;
     -moz-box-shadow: inset 0px 1px 0px 0px #ffffff;
     -webkit-box-shadow: inset 0px 1px 0px 0px #ffffff;
     box-shadow: inset 0px 1px 0px 0px #ffffff;
@@ -38,4 +38,54 @@
 .backButton:active {
     position: relative;
     top: 1px;
+}
+
+.aboutPage {
+    height: 100%;
+    text-align: center;
+}
+
+header {
+    margin-top: 3%;
+    margin-bottom: 3%;
+    font-family: 'Open Sans';
+    display: block;
+    text-align: center;
+}
+
+h1 {
+    font-size: 60px;
+}
+
+h2 {
+    color: lightslategray;
+}
+
+hr {
+    margin-top: 3%;
+    background-color: black;
+    width: 20%;
+    border: 3px solid black;
+    border-radius: 10px;
+    margin-bottom: 3%;
+}
+
+main {
+    margin: 0 auto;
+    align-items: center;
+    text-align: center;
+}
+
+ul {
+    margin: 0 auto;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    display: block;
+}
+
+li {
+    display: inline-block;
+    margin: 10px;
 }
