--- a/src/about/About.css
+++ b/src/about/About.css
@@ -46,6 +46,8 @@
 }
 
 header {
+    margin-left: 5%;
+    margin-right: 5%;
     margin-top: 3%;
     margin-bottom: 3%;
     font-family: 'Open Sans';
@@ -66,19 +68,20 @@ hr {
     background-color: black;
     width: 20%;
     border: 3px solid black;
-    border-radius: 10px;
+    border-radius: 15px;
     margin-bottom: 3%;
 }
 
 main {
-    margin: 0 auto;
+    width: 100%;
     align-items: center;
     text-align: center;
 }
 
 ul {
-    margin: 0 auto;
-    width: 100%;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
     align-items: center;
     justify-content: center;
     text-align: center;
