--- a/src/about/About.css
+++ b/src/about/About.css
@@ -21,7 +21,7 @@
     border: 0.995454px solid #bfbdbf;
     display: block;
     color: #666666;
-    font-family: 'Open Sans';
+    font-family: "Open Sans";
     font-size: 20px;
     font-weight: normal;
     font-style: normal;
@@ -50,7 +50,7 @@ header {
     margin-right: 5%;
     margin-top: 3%;
     margin-bottom: 3%;
-    font-family: 'Open Sans';
+    font-family: "Open Sans";
     display: block;
     text-align: center;
 }
@@ -64,7 +64,7 @@ h2 {
 }
 
 hr {
-    margin-top: 3%;
+    margin-top: 1.3%;
     background-color: black;
     width: 20%;
     border: 3px solid black;
@@ -91,4 +91,23 @@ ul {
 li {
     display: inline-block;
     margin: 10px;
+}
+
+#repoLink {
+    background-image: url("./imgs/giticon.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 120px;
+    height: 55px;
+    background-color: #f6f6f6;
+    margin-bottom: 5%;
+}
+
+.modal {
+    height: auto;
+    top: auto;
+    left: auto;
+    bottom: auto;
+    right: auto;
 }
