--- a/src/about/About.css
+++ b/src/about/About.css
@@ -75,14 +75,15 @@ hr {
 
 main {
     width: 100%;
-    align-items: center;
     text-align: center;
-    justify-content: center;
-    display: block;
 }
 
-.cardList {
+ul {
     text-align: center;
+    width: 80%;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
 }
 
 li {
