--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,15 @@
-.App {
+.backgroundImage {
+    position: fixed;
+    left: -1%;
+    right: -1%;
+    top: -1%;
+    bottom: -1%;
+    z-index: -9;
+    -webkit-filter: blur(2px);
+    -moz-filter: blur(2px);
+    -o-filter: blur(2px);
+    -ms-filter: blur(2px);
+    filter: blur(2px);
     background-color: #000000;
     background-size: cover;
     -webkit-background-size: cover;
@@ -6,11 +17,18 @@
     -o-background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    margin: 0;
     min-height: 100%;
-    height: 100%;
+    height: 102%;
     flex-grow: 1;
     overflow: auto;
+}
+
+.content {
+    z-index: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 #quoteStuff,
@@ -32,6 +50,7 @@
 }
 
 #quote {
+    font-family: 'Noto Sans HK', sans-serif;
     font-size: 30px;
 }
 
@@ -41,14 +60,17 @@
 
 #date {
     font-size: 60px;
+    font-family: 'Nunito', sans-serif;
 }
 
 #time {
     font-size: 50px;
+    font-family: 'Nunito', sans-serif;
 }
 
 #state {
     font-size: 45px;
+    font-family: 'Nunito', sans-serif;
 }
 
 hr.quoteRule {
@@ -59,15 +81,6 @@ hr.quoteRule {
     width: 5%;
     border: 2px solid white;
     border-radius: 15px;
-}
-
-
-.searchDiv {
-    text-align: center;
-}
-
-.searchDiv > input {
-    text-align: left;
 }
 
 #searchBar[type="search"]:focus {
@@ -109,31 +122,47 @@ input[type="search"]:-ms-input-placeholder {
     color: wheat;
 }
 
-.myButton {
-    margin-bottom: 10px;
+.aboutButton {
     text-align: center;
-    background-color: #456cc7;
-    -webkit-border-radius: 28px;
-    -moz-border-radius: 28px;
-    border-radius: 28px;
-    border: none;
-    display: inline-block;
-    cursor: pointer;
-    color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+    padding:6px;
+    background-color:#0066CC;
+    color:white;
+    vertical-align: auto;
+    margin: 15px;
+    transition: all 0.3s ease 0s;
+}
+
+.aboutButton:hover {
+   width:100px;
+   height:50px;
+   border-radius: 30px;
+   padding:6px;
+   background-color:#0066CC;
+   color:white;
+   transition:all 0.3s ease 0s;
+}
+
+.aboutButton span {
+    opacity: 0;
+    transition: all 0.3s ease 0s;
+}
+
+.aboutButton:hover span {
+    opacity: 1;
+   transition: all 0.3s ease 0s;
+}
+
+.aboutButton:hover span:after {
     font-family: "Open Sans";
-    font-size: 17px;
-    padding: 16px 31px;
-    text-decoration: none;
-    text-shadow: 0px 1px 0px #000000;
-}
-
-.myButton:hover {
-    background-color: #2fa4d6;
-}
-
-.myButton:active {
-    position: relative;
-    top: 1px;
+    margin-left: 10px;
+    content: "About";
+    transition: all 0.3s ease 0s;
 }
 
 @keyframes fadeIn {
@@ -179,4 +208,38 @@ input[type="search"]:-ms-input-placeholder {
     100% {
         opacity: 1;
     }
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: #969292;
+  border: 0px none #ffffff;
+  border-radius: 47px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #666666;
+}
+::-webkit-scrollbar-thumb:active {
+  background: #000000;
+}
+::-webkit-scrollbar-track {
+  background: #cfc9c9;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-track:hover {
+  background: #d7d5d5;
+}
+::-webkit-scrollbar-track:active {
+  background: #969292;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
 }
