--- a/src/App.css
+++ b/src/App.css
@@ -1,245 +1,63 @@
-.backgroundImage {
-    position: fixed;
-    left: -1%;
-    right: -1%;
-    top: -1%;
-    bottom: -1%;
-    z-index: -9;
-    -webkit-filter: blur(2px);
-    -moz-filter: blur(2px);
-    -o-filter: blur(2px);
-    -ms-filter: blur(2px);
-    filter: blur(2px);
-    background-color: #000000;
-    background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    min-height: 100%;
-    height: 102%;
-    flex-grow: 1;
-    overflow: auto;
+
+.App {
+  text-align: center;
+  min-width: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.content {
-    z-index: 0;
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.col {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    flex-wrap: wrap;
 }
 
-#quoteStuff,
-#dateStuff {
-    width: 80%;
-    margin: auto;
-}
-
-.mainPage {
-    margin: 10px;
-    font-family: "Open Sans";
-    text-shadow: 1px 1px 0px black;
-    color: white;
-    animation: fadeIn ease 10s;
-    -webkit-animation: fadeIn ease 10s;
-    -moz-animation: fadeIn ease 10s;
-    -o-animation: fadeIn ease 10s;
-    -ms-animation: fadeIn ease 10s;
-}
-
-#quote {
-    font-family: "Rubik", sans-serif;
-    font-size: 30px;
-}
-
-#author {
-    font-size: 25px;
-}
-
-#date {
-    font-size: 60px;
-    font-family: "Nunito", sans-serif;
-}
-
-#time {
-    font-size: 50px;
-    font-family: "Nunito", sans-serif;
-}
-
-#state {
-    font-size: 45px;
-    font-family: "Nunito", sans-serif;
-}
-
-hr.quoteRule {
-    margin: 0;
-    margin-top: 1.5%;
-    margin-bottom: 1%;
-    background-color: white;
-    width: 5%;
-    border: 2px solid white;
-    border-radius: 15px;
-}
-
-#searchBar[type="search"]:focus {
-    outline: none;
-    background-color: black;
-}
-
-#searchBar {
-    color: white;
-    border: none;
-    box-shadow: inset;
-    opacity: 0.48;
-    border-top-style: hidden;
-    border-right-style: hidden;
-    border-left-style: hidden;
-    border-bottom-style: hidden;
-    width: 60%;
-    font-size: large;
-    background-color: gray;
-    border-radius: 30px;
-    font-size: 18px;
-    padding-left: 00px;
-    padding: 20px;
-}
-
-input[type="search"]::-webkit-input-placeholder {
-    color: wheat;
-}
-
-input[type="search"]:-moz-placeholder {
-    color: wheat;
-}
-
-input[type="search"]::-moz-placeholder {
-    color: wheat;
-}
-
-input[type="search"]:-ms-input-placeholder {
-    color: wheat;
-}
-
-.aboutButton {
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50px;
-    height: 50px;
-    border-radius: 30px;
-    padding: 6px;
-    background-color: #0066cc;
-    color: white;
-    vertical-align: auto;
-    margin: 15px;
-    transition: all 0.3s ease 0s;
-}
-
-.aboutButton:hover {
-    width: 100px;
-    height: 50px;
-    border-radius: 30px;
-    padding: 6px;
-    background-color: #0066cc;
-    color: white;
-    transition: all 0.3s ease 0s;
-}
-
-.aboutButton span {
-    opacity: 0;
-    transition: all 0.3s ease 0s;
-}
-
-.aboutButton:hover span {
-    opacity: 1;
-    transition: all 0.3s ease 0s;
-}
-
-.aboutButton:hover span:after {
-    font-family: "Rubik", sans-serif;
-    margin-left: 10px;
-    content: "About";
-    transition: all 0.3s ease 0s;
-}
-
-@keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-@-moz-keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-@-webkit-keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-@-o-keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-@-ms-keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
+.social {
+  margin: 7px;
+  font-size: 40px;
+  cursor: pointer;
+  transition: all 0.2s ease 0s;
 }
 
 ::-webkit-scrollbar {
-    width: 6px;
-    height: 6px;
+  width: 0px;
+  height: 0px;
 }
 ::-webkit-scrollbar-button {
-    width: 0px;
-    height: 0px;
+  width: 0px;
+  height: 0px;
 }
 ::-webkit-scrollbar-thumb {
-    background: #969292;
-    border: 0px none #ffffff;
-    border-radius: 47px;
+  background: #969292;
+  border: 0px none #ffffff;
+  border-radius: 47px;
 }
 ::-webkit-scrollbar-thumb:hover {
-    background: #666666;
+  background: #666666;
 }
 ::-webkit-scrollbar-thumb:active {
-    background: #000000;
+  background: #000000;
 }
 ::-webkit-scrollbar-track {
-    background: #cfc9c9;
-    border: 0px none #ffffff;
-    border-radius: 50px;
+  background: #cfc9c9;
+  border: 0px none #ffffff;
+  border-radius: 50px;
 }
 ::-webkit-scrollbar-track:hover {
-    background: #d7d5d5;
+  background: #d7d5d5;
 }
 ::-webkit-scrollbar-track:active {
-    background: #969292;
+  background: #969292;
 }
 ::-webkit-scrollbar-corner {
-    background: transparent;
+  background: transparent;
 }
